# misc

./: .gitignore  pyproject.toml
doxygen/: Doxyfile
doxygen/misc/html/: ____init_____8py_source.html  check-lib_8py_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_88826aa2a10e1882b573f502bc7f4b55.html  dir_88826aa2a10e1882b573f502bc7f4b55.js  doxygen_crawl.html  files.html  index.html  navtreedata.js  navtreeindex0.js  write__publication__html_8py_source.html
doxygen/misc/latex/: ____init_____8py_source.tex  check-lib_8py_source.tex  files.tex  refman.tex  write__publication__html_8py_source.tex
src/misc/: __init__.py  check-lib.py  doxygen_collection.py  write_publication_html.py
src/misc/.vim/: .netrwhist
